--- a/src/app/global.css
+++ b/src/app/global.css
@@ -27,9 +27,9 @@ nav {
 .social-media-icon {
     width: 2.5rem;
     transition: 0.5s;
+}
 
-    &:hover {
-        transition: 0.5s;
-        transform: scale(1.1);
-    }
+.social-media-icon:hover {
+    transition: 0.5s;
+    transform: scale(1.1);
 }
