Added external site links to project cards

--- a/src/app/projects/projects_page.module.css
+++ b/src/app/projects/projects_page.module.css
@@ -2,4 +2,12 @@
     height: min(13rem, 100%);
 }
 
+.project_card .project_link_icon {
+    width: 1.75rem;
+    transition: 0.5s;
+}
 
+.project_link_icon:hover {
+    transition: 0.5s;
+    transform: scale(1.2);
+}
