--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -20,6 +20,12 @@ because of the background being absolutely positioned */
 }
 
 
+.content_overlay .typewriter_wrapper {
+  font-size: 2em;
+  font-weight: bold;
+}
+
+
 /* Styling for the background circle for the image on the HomePage */
 .content_overlay .image_background {
   width: min(20rem, 60vw);
