Moved animation out from AboutMe image to AboutMeRow so description takes the same effect

--- a/src/app/about/about_page.module.css
+++ b/src/app/about/about_page.module.css
@@ -13,6 +13,7 @@
 /* Styling for the image of myself in the AboutMeRow */
 .self_image {
     width: min(20rem, 60vw);
+    height: min(20rem, 60vw);
 }
 
 /* Styling for the description text column */
