--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11845,14 +11845,55 @@ textarea.form-control-lg {
   }
 }
 [data-bs-theme=dark-blue] {
-  --bs-body-color: #EEE1B3;
-  --bs-body-color-rgb: 238, 225, 179;
-  --bs-body-bg: #0b0a19;
-  --bs-body-bg-rgb: 11, 10, 25;
-  --bs-secondary-color: #adb5bd;
-  --bs-secondary-color: 173, 181, 189;
-  --bs-secondary-bg: #19183c !important;
-  --bs-secondary-bg: 25, 24, 60 !important;
+  --bs-body-color: #fff;
+  --bs-body-color-rgb: 255, 255, 255;
+  --bs-body-bg: #111827;
+  --bs-body-bg-rgb: 17, 24, 39;
+  --bs-secondary-color: rgba(255, 255, 255, 0.75);
+  --bs-secondary-color-rgb: 255, 255, 255;
+  --bs-secondary-bg: #7C98B3;
+  --bs-secondary-bg-rgb: 124, 152, 179;
+  --bs-tertiary-bg: #374151;
+  --bs-tertiary-bg-rgb: 55, 65, 81;
+  --bs-primary-text-emphasis: #ffedd2;
+  --bs-secondary-text-emphasis: #688366;
+  --bs-success-text-emphasis: #75b798;
+  --bs-info-text-emphasis: #ffd0bb;
+  --bs-warning-text-emphasis: #ffda6a;
+  --bs-danger-text-emphasis: #ea868f;
+  --bs-light-text-emphasis: #f8f9fa;
+  --bs-dark-text-emphasis: #dee2e6;
+  --bs-primary-bg-subtle: #ffedd2;
+  --bs-secondary-bg-subtle: #010a00;
+  --bs-success-bg-subtle: #051b11;
+  --bs-info-bg-subtle: #33231c;
+  --bs-warning-bg-subtle: #332701;
+  --bs-danger-bg-subtle: #2c0b0e;
+  --bs-light-bg-subtle: #343a40;
+  --bs-dark-bg-subtle: #0b0a19;
+  --bs-primary-border-subtle: #ffedd2;
+  --bs-secondary-border-subtle: #021d00;
+  --bs-success-border-subtle: #0f5132;
+  --bs-info-border-subtle: #996a55;
+  --bs-warning-border-subtle: #997404;
+  --bs-danger-border-subtle: #842029;
+  --bs-light-border-subtle: #495057;
+  --bs-dark-border-subtle: #343a40;
+  --bs-navbar-link-color: rgba(255, 237, 210, 0.65);
+  --bs-navbar-link-hover-color: rgba(255, 237, 210, 0.8);
+  --bs-navbar-link-active-color: #ffedd2;
+}
+[data-bs-theme=dark-blue] .navbar-toggler-icon {
+  --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+[data-bs-theme=dark-blue] .navbar-nav .nav-link {
+  color: var(--bs-navbar-link-color);
+}
+[data-bs-theme=dark-blue] .navbar-nav .nav-link:hover, [data-bs-theme=dark-blue] .navbar-nav .nav-link:focus {
+  color: var(--bs-navbar-link-hover-color);
+}
+[data-bs-theme=dark-blue] .navbar-nav .nav-link.active {
+  color: var(--bs-navbar-link-active-color);
 }
 
 /*# sourceMappingURL=main.css.map */
