--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11915,4 +11915,75 @@ textarea.form-control-lg {
   --bs-accordion-active-color: #111827;
 }
 
+[data-bs-theme=vanillia] {
+  --bs-body-color: #111827;
+  --bs-body-color-rgb: 17, 24, 39;
+  --bs-body-bg: #ffefd8;
+  --bs-body-bg-rgb: 255, 239, 216;
+  --bs-secondary-color: rgba(17, 24, 39, 0.75);
+  --bs-secondary-color-rgb: 17, 24, 39;
+  --bs-secondary-bg: #A68C9C;
+  --bs-secondary-bg-rgb: 166, 140, 156;
+  --bs-tertiary-bg: #374151;
+  --bs-tertiary-bg-rgb: 55, 65, 81;
+  --bs-primary-text-emphasis: #111827;
+  --bs-secondary-text-emphasis: #fff5e8;
+  --bs-success-text-emphasis: #75b798;
+  --bs-info-text-emphasis: #6edff6;
+  --bs-warning-text-emphasis: #ffda6a;
+  --bs-danger-text-emphasis: #ea868f;
+  --bs-light-text-emphasis: #f8f9fa;
+  --bs-dark-text-emphasis: #dee2e6;
+  --bs-primary-bg-subtle: #111827;
+  --bs-secondary-bg-subtle: #33302b;
+  --bs-success-bg-subtle: #051b11;
+  --bs-info-bg-subtle: #032830;
+  --bs-warning-bg-subtle: #332701;
+  --bs-danger-bg-subtle: #2c0b0e;
+  --bs-light-bg-subtle: #343a40;
+  --bs-dark-bg-subtle: #3182ce;
+  --bs-primary-border-subtle: #111827;
+  --bs-secondary-border-subtle: #998f82;
+  --bs-success-border-subtle: #0f5132;
+  --bs-info-border-subtle: #087990;
+  --bs-warning-border-subtle: #997404;
+  --bs-danger-border-subtle: #842029;
+  --bs-light-border-subtle: #495057;
+  --bs-dark-border-subtle: #343a40;
+  --bs-navbar-link-color: rgba(255, 255, 255, 0.65);
+  --bs-navbar-link-hover-color: rgba(255, 255, 255, 0.8);
+  --bs-navbar-link-active-color: #fff;
+}
+[data-bs-theme=vanillia] .navbar-toggler-icon {
+  --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+[data-bs-theme=vanillia] .navbar-nav .nav-link {
+  color: var(--bs-navbar-link-color);
+}
+[data-bs-theme=vanillia] .navbar-nav .nav-link:hover, [data-bs-theme=vanillia] .navbar-nav .nav-link:focus {
+  color: var(--bs-navbar-link-hover-color);
+}
+[data-bs-theme=vanillia] .navbar-nav .nav-link.active {
+  color: var(--bs-navbar-link-active-color);
+}
+[data-bs-theme=vanillia] .btn-primary {
+  --bs-btn-color: #ffefd8;
+  --bs-btn-bg: #111827;
+  --bs-btn-border-color: #111827;
+  --bs-btn-hover-color: #ffefd8;
+  --bs-btn-hover-bg: rgba(17, 24, 39, 0.95);
+  --bs-btn-hover-border-color: #ffefd8;
+  --bs-btn-focus-shadow-rgb: 49, 132, 253;
+  --bs-btn-active-color: #ffefd8;
+  --bs-btn-active-bg: rgba(17, 24, 39, 0.8);
+  --bs-btn-active-border-color: #ffefd8;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #ffefd8;
+  --bs-btn-disabled-bg: rgba(17, 24, 39, 0.9);
+  --bs-btn-disabled-border-color: #111827;
+}
+[data-bs-theme=vanillia] .accordion {
+  --bs-accordion-active-color: #ffefd8;
+}
+
 /*# sourceMappingURL=main.css.map */
