--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -20,16 +20,9 @@ because of the background being absolutely positioned */
 }
 
 
-/* Wrapper for typewriter container */
-.content_overlay .typewriter_wrapper {
-  font-size: 2em;
-  font-weight: bold;
-}
-
-
 /* Styling for the background circle for the image on the HomePage */
 .content_overlay .image_background {
-  width: min(20rem, 60vw);
+  width: min(20rem, 100%);
   border-radius: 50%;
   overflow: hidden;
   background-color: rgba(43,48,53,0.5)
