--- a/src/styles/_variables-dark-blue.scss
+++ b/src/styles/_variables-dark-blue.scss
@@ -51,6 +51,17 @@ $mark-bg-dark-blue:                      $yellow-800 !default;
 
 // // Navbar
 
-$navbar-link-color-dark-blue: rgba($white, .65) !default;
-$navbar-link-hover-color-dark-blue: rgba($white, .8) !default;
-$navbar-link-active-color-dark-blue: $white !default;
+$navbar-link-color-dark-blue:           rgba($white, .65) !default;
+$navbar-link-hover-color-dark-blue:     rgba($white, .8) !default;
+$navbar-link-active-color-dark-blue:    $white !default;
+
+// Modal & Accordion button
+$btn-close-color-dark-blue:                 $white;
+$btn-close-bg-dark-blue:                    url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23#{str-slice(inspect($btn-close-color-dark-blue), 2)}'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");
+$btn-close-opacity-dark-blue:               0.5;
+
+$accordion-btn-icon-color-dark-blue:        $white !default;
+$accordion-btn-icon-collapsed-dark-blue:    url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='none' stroke='%23#{str-slice(inspect($accordion-btn-icon-color-dark-blue), 2)}' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='M2 5L8 11L14 5'/%3e%3c/svg%3e");
+
+$accordion-btn-icon-active-color-dark-blue:         $black !default;
+$accordion-btn-icon-active-dark-blue:               url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='none' stroke='%23#{str-slice(inspect($accordion-btn-icon-active-color-dark-blue), 2)}' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='M2 5L8 11L14 5'/%3e%3c/svg%3e");
